[package]
name = "LaLuisa"
version = "0.1.0"
edition = "2024"
description = "LLM-Automated Documentation for Luisa"

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde_json = "1.0.140"
bytes = "1.10.1"
anyhow = "1.0.97"
futures-util = "0.3.31"
tokio = { version = "1.16.1", features = ["full"] }
ringbuffer = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
tool_schema = { path = "src/tool_schema" }
tool_schema_derive = { path = "src/tool_schema_derive" }
